[gd_scene load_steps=7 format=3 uid="uid://b3hjgbyt4tc6"]

[ext_resource type="Script" path="res://menus/phone/messages/message_char.gd" id="1_vb112"]
[ext_resource type="Texture2D" uid="uid://llwj0kl05o12" path="res://menus/phone/messages/portraits/portrait_empty.png" id="2_86v2l"]
[ext_resource type="Texture2D" uid="uid://c81wdrdpsqjtl" path="res://menus/phone/messages/text_arrow.png" id="3_2m5df"]
[ext_resource type="PackedScene" uid="uid://cwnhjhgmo3p32" path="res://menus/heart_display/hearts_display.tscn" id="4_bqxhe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcjri"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.141176)
border_blend = true
shadow_size = 5
shadow_offset = Vector2(0, 2.995)
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_sfibi"]
font_size = 24
outline_size = 1

[node name="MessageChar" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -868.0
offset_bottom = -571.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_vb112")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(0.776471, 0.184314, 0.184314, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rcjri")

[node name="FaceIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 58.0
offset_bottom = -24.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_86v2l")
expand_mode = 1
stretch_mode = 4

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -30.5
offset_right = 63.5
offset_bottom = 4.50002
grow_horizontal = 2
grow_vertical = 2
text = "<char>"
label_settings = SubResource("LabelSettings_sfibi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0, 0, 0, 0.372549)

[node name="HeartsDisplay" parent="ColorRect" instance=ExtResource("4_bqxhe")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 6.0
offset_top = 1.0
offset_right = -6.0
offset_bottom = -1.0
mouse_filter = 2

[node name="TextNodes" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SendArrow" type="TextureRect" parent="TextNodes"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = 1.99999
offset_right = -8.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_2m5df")
expand_mode = 1
stretch_mode = 4

[node name="UnreadText" type="RichTextLabel" parent="TextNodes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -42.5
offset_right = -50.0
offset_bottom = -18.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[right]<unreads>"

[connection signal="pressed" from="." to="." method="_on_pressed"]
